Chore: Fixed Dropdown text alignment

--- a/src/app/components/Dropdown/Dropdown.module.css
+++ b/src/app/components/Dropdown/Dropdown.module.css
@@ -10,6 +10,8 @@
     width: 230px;
     height: 40px;
     align-items: center;
+    justify-content: center;
+    justify-items: center;
 }
 
 .dropdownButton:hover {
@@ -22,7 +24,7 @@
 
 .dropdownMenu {
     position: absolute;
-    top: 100%; /* Below the button */
+    top: 100%;
     left: 0;
     background-color: white;
     border: 1px solid #ddd;
@@ -31,7 +33,8 @@
     list-style: none;
     padding: 0;
     z-index: 1000;
-    width: 200px;
+    width: 230px;
+    align-items: center;
 }
 
 .dropdownItem {
@@ -39,6 +42,7 @@
     cursor: pointer;
     font-size: 24px;
     background-color: black;
+    align-items: center;
 }
 
 .dropdownItem:hover {
